# C0-Language-Compiler

./: .gitignore  README.md
c0-src/: proj.cabal
c0-src/src/: AST.hs  FinalCode.hs  IntermCode.hs  Lexer.x  Main.hs  Parser.y  Typecheck.hs
