
name:                c0-lang
version:             1.0.0.0
synopsis:            Linguagem C0
description:         Linguagem C0
author:              Vasco Serrano & Diogo Aluai
maintainer:          up201503010@fc.up.pt & up201805418@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable c0-lang
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, Typecheck
  build-tools:         alex, happy
  build-depends:       base, array, QuickCheck, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
